--- a/index.html
+++ b/index.html
@@ -460,10 +460,21 @@
     <section id="business-scope" class="business-scope">
         <div class="container">
             <div class="section-header">
-                <h2 class="section-title">交易所DBA负责人业务范围</h2>
+                <h2 class="section-title">交易所数据库团队职责</h2>
                 <p class="section-subtitle">全面的数据库支持与管理体系</p>
             </div>
             <div class="mindmap-container">
+                <div class="mindmap-controls">
+                    <button id="zoomInBtn" class="control-btn" title="放大">
+                        <i class="fas fa-search-plus"></i>
+                    </button>
+                    <button id="zoomOutBtn" class="control-btn" title="缩小">
+                        <i class="fas fa-search-minus"></i>
+                    </button>
+                    <button id="resetZoomBtn" class="control-btn" title="重置视图">
+                        <i class="fas fa-expand-arrows-alt"></i>
+                    </button>
+                </div>
                 <div id="myDiagramDiv" class="mindmap-diagram"></div>
             </div>
         </div>
