--- a/index.html
+++ b/index.html
@@ -25,7 +25,6 @@
                 <li><a href="#projects" class="nav-link">项目</a></li>
                 <li><a href="#skills" class="nav-link">技能</a></li>
                 <li><a href="#intention" class="nav-link">求职意向</a></li>
-                <li><a href="#business-scope" class="nav-link">业务范围</a></li>
                 <li><a href="#okx" class="nav-link">OKX职责</a></li>
                 <li><button id="exportPdfBtn" class="nav-link pdf-btn">
                     <i class="fas fa-file-pdf"></i>
@@ -456,29 +455,6 @@
         </div>
     </section>
 
-    <!-- 业务范围脑图部分 -->
-    <section id="business-scope" class="business-scope">
-        <div class="container">
-            <div class="section-header">
-                <h2 class="section-title">交易所数据库团队职责</h2>
-                <p class="section-subtitle">全面的数据库支持与管理体系</p>
-            </div>
-            <div class="mindmap-container">
-                <div class="mindmap-controls">
-                    <button id="zoomInBtn" class="control-btn" title="放大">
-                        <i class="fas fa-search-plus"></i>
-                    </button>
-                    <button id="zoomOutBtn" class="control-btn" title="缩小">
-                        <i class="fas fa-search-minus"></i>
-                    </button>
-                    <button id="resetZoomBtn" class="control-btn" title="重置视图">
-                        <i class="fas fa-expand-arrows-alt"></i>
-                    </button>
-                </div>
-                <div id="myDiagramDiv" class="mindmap-diagram"></div>
-            </div>
-        </div>
-    </section>
 
     <!-- OKX职责部分 -->
     <section id="okx" class="okx-duties">
@@ -578,6 +554,24 @@
                     </div>
                 </div>
 
+            </div>
+        </div>
+    </section>
+
+    <!-- 数据库支持脑图部分 -->
+    <section id="database-mindmap" class="database-mindmap">
+        <div class="container">
+            <div class="section-header">
+                <h2 class="section-title">数据库支持体系架构</h2>
+                <p class="section-subtitle">全面的数据库支持与管理体系</p>
+            </div>
+            <div class="mindmap-container">
+                <div class="mindmap-controls">
+                    <button id="databaseFullscreenBtn" class="control-btn" title="全屏/退出全屏">
+                        <i class="fas fa-expand"></i>
+                    </button>
+                </div>
+                <div id="databaseDiagramDiv" class="mindmap-diagram"></div>
             </div>
         </div>
     </section>
