--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="nav-container">
             <div class="nav-logo">
                 <i class="fas fa-database"></i>
-                <span>数据库负责人</span>
+                <span>数据库负责人应聘</span>
             </div>
             <ul class="nav-menu">
                 <li><a href="#home" class="nav-link">首页</a></li>
@@ -57,7 +57,7 @@
                     <span class="title-line">与</span>
                     <span class="title-line highlight">DBA专家</span>
                 </h1>
-                <p class="hero-subtitle">专注于高性能数据库设计与运维，在OKX交易所担任DBA负责人</p>
+                <p class="hero-subtitle">十三年金融制造互联网DBA经验，腾讯快手数据库平台建设专家</p>
                 <div class="hero-buttons">
                     <button class="btn btn-primary" onclick="scrollToSection('about')">
                         <i class="fas fa-user"></i>
@@ -126,7 +126,7 @@
                             <div class="stat-label">成功项目</div>
                         </div>
                         <div class="stat-item">
-                            <div class="stat-number">99.9%</div>
+                            <div class="stat-number">99.995%</div>
                             <div class="stat-label">系统可用性</div>
                         </div>
                         <div class="stat-item">
@@ -138,16 +138,18 @@
                 <div class="about-visual">
                     <div class="profile-card">
                         <div class="profile-avatar">
-                            <i class="fas fa-user-tie"></i>
+                            <img src="touxiang.jpg" alt="个人头像" class="avatar-image">
                         </div>
                         <div class="profile-info">
-                            <h4>数据库专家</h4>
-                            <p>OKX DBA负责人</p>
+                            <h4>冯伟源</h4>
+                            <p>数据库平台管控负责人</p>
                             <div class="profile-tags">
                                 <span class="tag">MySQL</span>
                                 <span class="tag">PostgreSQL</span>
                                 <span class="tag">Redis</span>
                                 <span class="tag">MongoDB</span>
+                                <span class="tag">Milvus</span>
+                                <span class="tag">HBase</span>
                             </div>
                         </div>
                     </div>
@@ -571,7 +573,7 @@
                         <i class="fas fa-expand"></i>
                     </button>
                 </div>
-                <div id="databaseDiagramDiv" class="mindmap-diagram"></div>
+                <div id="myDiagramDiv" class="mindmap-diagram"></div>
             </div>
         </div>
     </section>
@@ -600,9 +602,7 @@
                 <div class="footer-section">
                     <h4>关注我</h4>
                     <div class="social-links">
-                        <a href="#"><i class="fab fa-linkedin"></i></a>
-                        <a href="#"><i class="fab fa-github"></i></a>
-                        <a href="#"><i class="fab fa-twitter"></i></a>
+                        <a href="https://github.com/fengweiyuan" target="_blank" rel="noopener noreferrer"><i class="fab fa-github"></i></a>
                     </div>
                 </div>
             </div>
