--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gojs/2.3.16/go.js"></script>
 </head>
 <body>
@@ -23,6 +22,7 @@
                 <li><a href="#about" class="nav-link">关于我</a></li>
                 <li><a href="#career" class="nav-link">职业经历</a></li>
                 <li><a href="#projects" class="nav-link">项目</a></li>
+                <li><a href="#platform-capabilities" class="nav-link">平台能力</a></li>
                 <li><a href="#skills" class="nav-link">技能</a></li>
                 <li><a href="#intention" class="nav-link">求职意向</a></li>
                 <li><a href="#okx" class="nav-link">OKX职责</a></li>
@@ -30,16 +30,10 @@
                 <li><a href="#certifications" class="nav-link">资质认证</a></li>
                 <li><a href="#personal-info" class="nav-link">个人信息</a></li>
             </ul>
-            <div class="nav-actions">
-                <button class="export-png-btn" onclick="exportToPNG()" title="导出PNG截图">
-                    <i class="fas fa-download"></i>
-                    <span>导出PNG</span>
-                </button>
-                <div class="hamburger">
-                    <span></span>
-                    <span></span>
-                    <span></span>
-                </div>
+            <div class="hamburger">
+                <span></span>
+                <span></span>
+                <span></span>
             </div>
         </div>
     </nav>
@@ -627,6 +621,294 @@
                             <span class="stat-value">短视频</span>
                             <span class="stat-label">业务支撑</span>
                         </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- 数据库运维管控平台抽象能力建设部分 -->
+    <section id="platform-capabilities" class="platform-capabilities">
+        <div class="container">
+            <div class="section-header">
+                <h2 class="section-title">数据库运维管控平台的抽象能力建设</h2>
+                <p class="section-subtitle">构建企业级数据库运维管控平台的核心能力体系</p>
+            </div>
+            <div class="capabilities-content">
+                <div class="capabilities-grid">
+                    <div class="capability-category">
+                        <div class="category-header">
+                            <i class="fas fa-warehouse"></i>
+                            <h3>仓库式管理</h3>
+                        </div>
+                        <p>按地域分开控制平面爆炸半径，实现精细化运维管理</p>
+                    </div>
+
+                    <div class="capability-category">
+                        <div class="category-header">
+                            <i class="fas fa-tasks"></i>
+                            <h3>作业平台</h3>
+                        </div>
+                        <ul class="capability-list">
+                            <li>Python与SHELL任务执行</li>
+                            <li>插件开发（GO，PYTHON）</li>
+                            <li>交互式执行器</li>
+                            <li>BPMN流程</li>
+                        </ul>
+                    </div>
+
+                    <div class="capability-category">
+                        <div class="category-header">
+                            <i class="fas fa-clock"></i>
+                            <h3>定时调度</h3>
+                        </div>
+                        <p>自动化任务调度与执行管理</p>
+                    </div>
+
+                    <div class="capability-category">
+                        <div class="category-header">
+                            <i class="fas fa-project-diagram"></i>
+                            <h3>流程引擎</h3>
+                        </div>
+                        <ul class="capability-list">
+                            <li>BPMN流程设计</li>
+                            <li>循环与分支控制</li>
+                            <li>复杂业务流程编排</li>
+                        </ul>
+                    </div>
+
+                    <div class="capability-category">
+                        <div class="category-header">
+                            <i class="fas fa-cogs"></i>
+                            <h3>配置管理</h3>
+                        </div>
+                        <ul class="capability-list">
+                            <li>配置文件管理</li>
+                            <li>杂项配置中心</li>
+                            <li>配置版本控制</li>
+                        </ul>
+                    </div>
+
+                    <div class="capability-category">
+                        <div class="category-header">
+                            <i class="fas fa-robot"></i>
+                            <h3>管控AGENT</h3>
+                        </div>
+                        <ul class="capability-list">
+                            <li>心跳上报</li>
+                            <li>监控收集</li>
+                            <li>命令执行</li>
+                        </ul>
+                    </div>
+
+                    <div class="capability-category">
+                        <div class="category-header">
+                            <i class="fas fa-folder"></i>
+                            <h3>文件管理</h3>
+                        </div>
+                        <ul class="capability-list">
+                            <li>上传下载二进制工具</li>
+                            <li>NFS共享存储</li>
+                            <li>WEB文件管理</li>
+                        </ul>
+                    </div>
+
+                    <div class="capability-category">
+                        <div class="category-header">
+                            <i class="fas fa-memory"></i>
+                            <h3>KV缓存模块</h3>
+                        </div>
+                        <p>开发过程中统一使用的缓存解决方案</p>
+                    </div>
+
+                    <div class="capability-category">
+                        <div class="category-header">
+                            <i class="fas fa-lock"></i>
+                            <h3>分布式锁模块</h3>
+                        </div>
+                        <p>确保分布式环境下的数据一致性</p>
+                    </div>
+
+                    <div class="capability-category">
+                        <div class="category-header">
+                            <i class="fas fa-chart-line"></i>
+                            <h3>监控模块</h3>
+                        </div>
+                        <ul class="capability-list">
+                            <li>机器监控</li>
+                            <li>进程监控</li>
+                            <li>性能指标采集</li>
+                        </ul>
+                    </div>
+
+                    <div class="capability-category">
+                        <div class="category-header">
+                            <i class="fas fa-bell"></i>
+                            <h3>事件中心</h3>
+                        </div>
+                        <p>统一的事件处理与分发机制</p>
+                    </div>
+
+                    <div class="capability-category">
+                        <div class="category-header">
+                            <i class="fas fa-exclamation-triangle"></i>
+                            <h3>告警中心</h3>
+                        </div>
+                        <p>智能告警管理与通知系统</p>
+                    </div>
+
+                    <div class="capability-category">
+                        <div class="category-header">
+                            <i class="fas fa-cube"></i>
+                            <h3>K8S接入</h3>
+                        </div>
+                        <p>容器化部署与管理能力</p>
+                    </div>
+
+                    <div class="capability-category">
+                        <div class="category-header">
+                            <i class="fas fa-network-wired"></i>
+                            <h3>名字服务管理</h3>
+                        </div>
+                        <p>不同产品、集群类型、节点类型的名字服务统一管理</p>
+                    </div>
+
+                    <div class="capability-category">
+                        <div class="category-header">
+                            <i class="fas fa-server"></i>
+                            <h3>部署集群抽象模块</h3>
+                        </div>
+                        <p>数据库新建集群的标准化流程抽象</p>
+                    </div>
+
+                    <div class="capability-category">
+                        <div class="category-header">
+                            <i class="fas fa-expand-arrows-alt"></i>
+                            <h3>扩容节点抽象</h3>
+                        </div>
+                        <p>集群扩容节点的通用化处理流程</p>
+                    </div>
+
+                    <div class="capability-category">
+                        <div class="category-header">
+                            <i class="fas fa-microchip"></i>
+                            <h3>机器资源分配模块</h3>
+                        </div>
+                        <p>智能资源分配算法与优化策略</p>
+                    </div>
+
+                    <div class="capability-category">
+                        <div class="category-header">
+                            <i class="fas fa-database"></i>
+                            <h3>DBCMDB与元数据管理</h3>
+                        </div>
+                        <ul class="capability-list">
+                            <li>机器管理</li>
+                            <li>节点（服务）管理</li>
+                            <li>POD管理</li>
+                            <li>信息收集、缓存与对外接口</li>
+                        </ul>
+                    </div>
+
+                    <div class="capability-category">
+                        <div class="category-header">
+                            <i class="fas fa-clipboard-list"></i>
+                            <h3>集群申请通用表单</h3>
+                        </div>
+                        <p>标准化的数据库集群申请流程</p>
+                    </div>
+
+                    <div class="capability-category">
+                        <div class="category-header">
+                            <i class="fas fa-calculator"></i>
+                            <h3>计费相关</h3>
+                        </div>
+                        <ul class="capability-list">
+                            <li>项目组与租户管理</li>
+                            <li>QUOTA配额管理</li>
+                            <li>成本核算</li>
+                        </ul>
+                    </div>
+
+                    <div class="capability-category">
+                        <div class="category-header">
+                            <i class="fas fa-desktop"></i>
+                            <h3>节点管理</h3>
+                        </div>
+                        <ul class="capability-list">
+                            <li>元数据状态管理</li>
+                            <li>启停控制</li>
+                            <li>扩缩容操作</li>
+                        </ul>
+                    </div>
+
+                    <div class="capability-category">
+                        <div class="category-header">
+                            <i class="fas fa-satellite-dish"></i>
+                            <h3>拨测相关</h3>
+                        </div>
+                        <p>网络连通性与服务可用性检测</p>
+                    </div>
+
+                    <div class="capability-category">
+                        <div class="category-header">
+                            <i class="fas fa-shield-alt"></i>
+                            <h3>登录与鉴权</h3>
+                        </div>
+                        <p>统一身份认证与权限管理</p>
+                    </div>
+
+                    <div class="capability-category">
+                        <div class="category-header">
+                            <i class="fas fa-edit"></i>
+                            <h3>变更管理</h3>
+                        </div>
+                        <ul class="capability-list">
+                            <li>变更审批流程</li>
+                            <li>变更记录追踪</li>
+                            <li>风险评估</li>
+                        </ul>
+                    </div>
+
+                    <div class="capability-category">
+                        <div class="category-header">
+                            <i class="fas fa-bug"></i>
+                            <h3>事故与问题管理</h3>
+                        </div>
+                        <p>故障处理与问题跟踪系统</p>
+                    </div>
+
+                    <div class="capability-category">
+                        <div class="category-header">
+                            <i class="fas fa-chart-pie"></i>
+                            <h3>预算与成本管理</h3>
+                        </div>
+                        <ul class="capability-list">
+                            <li>预算规划</li>
+                            <li>采买管理</li>
+                            <li>收入成本分析</li>
+                        </ul>
+                    </div>
+
+                    <div class="capability-category">
+                        <div class="category-header">
+                            <i class="fas fa-eye"></i>
+                            <h3>监控告警相关</h3>
+                        </div>
+                        <ul class="capability-list">
+                            <li>Exporter数据采集</li>
+                            <li>Prometheus监控</li>
+                            <li>Grafana可视化</li>
+                            <li>Open-Falcon集成</li>
+                        </ul>
+                    </div>
+
+                    <div class="capability-category">
+                        <div class="category-header">
+                            <i class="fas fa-sync-alt"></i>
+                            <h3>CI/CD相关</h3>
+                        </div>
+                        <p>持续集成与持续部署能力</p>
                     </div>
                 </div>
             </div>
