--- a/index.html
+++ b/index.html
@@ -1396,7 +1396,7 @@
                             <i class="fas fa-crown"></i>
                         </div>
                         <h3>DBA团队负责人</h3>
-                        <p>负责OKX交易所数据库团队的管理与协调，确保核心交易系统的稳定运行</p>
+                        <p>负责OKX交易所数据库团队的管理与协调，确保数据库系统稳定高效运行</p>
                     </div>
                 </div>
                 
