--- a/index.html
+++ b/index.html
@@ -19,16 +19,16 @@
             </div>
             <ul class="nav-menu">
                 <li><a href="#home" class="nav-link">首页</a></li>
-                <li><a href="#about" class="nav-link">关于我</a></li>
-                <li><a href="#career" class="nav-link">职业经历</a></li>
+                <li><a href="#about" class="nav-link">关于</a></li>
+                <li><a href="#career" class="nav-link">经历</a></li>
                 <li><a href="#projects" class="nav-link">项目</a></li>
-                <li><a href="#platform-capabilities" class="nav-link">平台能力</a></li>
+                <li><a href="#platform-capabilities" class="nav-link">平台</a></li>
                 <li><a href="#skills" class="nav-link">技能</a></li>
-                <li><a href="#intention" class="nav-link">求职意向</a></li>
+                <li><a href="#intention" class="nav-link">意向</a></li>
                 <li><a href="#okx" class="nav-link">OKX职责</a></li>
-                <li><a href="#career-highlights" class="nav-link">职业亮点</a></li>
-                <li><a href="#certifications" class="nav-link">资质认证</a></li>
-                <li><a href="#personal-info" class="nav-link">个人信息</a></li>
+                <li><a href="#career-highlights" class="nav-link">亮点</a></li>
+                <li><a href="#certifications" class="nav-link">认证</a></li>
+                <li><a href="#personal-info" class="nav-link">个人</a></li>
             </ul>
             <div class="hamburger">
                 <span></span>
@@ -1488,7 +1488,7 @@
     <section id="database-mindmap" class="database-mindmap">
         <div class="container">
             <div class="section-header">
-                <h2 class="section-title">数据库支持体系架构</h2>
+                <h2 class="section-title">数据库团队工作支持</h2>
                 <p class="section-subtitle">全面的数据库支持与管理体系</p>
             </div>
             <div class="mindmap-container">
