--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="nav-container">
             <div class="nav-logo">
                 <i class="fas fa-database"></i>
-                <span>OKX数据库负责人应聘</span>
+                <span>Vivo数据库运维工程师应聘</span>
             </div>
             <ul class="nav-menu">
                 <li><a href="#home" class="nav-link">首页</a></li>
@@ -25,7 +25,7 @@
                 <li><a href="#platform-capabilities" class="nav-link">平台</a></li>
                 <li><a href="#skills" class="nav-link">技能</a></li>
                 <li><a href="#intention" class="nav-link">意向</a></li>
-                <li><a href="#okx" class="nav-link">OKX职责</a></li>
+                <li><a href="#okx" class="nav-link">职责</a></li>
                 <li><a href="#career-highlights" class="nav-link">亮点</a></li>
                 <li><a href="#certifications" class="nav-link">认证</a></li>
                 <li><a href="#personal-info" class="nav-link">个人</a></li>
@@ -1351,10 +1351,10 @@
                     <h3>目标职位</h3>
                     <div class="position-info">
                         <div class="company-logo">
-                            <span>OKX</span>
+                            <span>Vivo</span>
                         </div>
                         <div class="position-details">
-                            <h4>DBA负责人</h4>
+                            <h4>数据库运维专家</h4>
                             <p>数据库架构师 & 团队管理</p>
                         </div>
                     </div>
@@ -1386,8 +1386,8 @@
     <section id="okx" class="okx-duties">
         <div class="container">
             <div class="section-header">
-                <h2 class="section-title">OKX DBA负责人职责</h2>
-                <p class="section-subtitle">在OKX交易所的核心职责与工作内容</p>
+                <h2 class="section-title">DBA职责</h2>
+                <p class="section-subtitle">核心职责与工作内容</p>
             </div>
             <div class="duties-content">
                 <div class="duties-overview">
@@ -1395,8 +1395,8 @@
                         <div class="overview-icon">
                             <i class="fas fa-crown"></i>
                         </div>
-                        <h3>DBA团队负责人</h3>
-                        <p>负责OKX交易所数据库团队的管理与协调，确保数据库系统稳定高效运行</p>
+                        <h3>数据库运维工程师</h3>
+                        <p>负责数据库团队的管理与协调，确保数据库系统稳定高效运行</p>
                     </div>
                 </div>
                 
