--- a/index.html
+++ b/index.html
@@ -1678,41 +1678,78 @@
                 <p class="section-subtitle">个人基本信息与联系方式</p>
             </div>
             <div class="personal-info-content">
-                <div class="info-compact-grid">
-                    <div class="info-compact-item">
-                        <div class="info-compact-icon">
+                <div class="info-cards-grid">
+                    <!-- 基本信息卡片 -->
+                    <div class="info-card">
+                        <div class="card-header">
                             <i class="fas fa-user"></i>
+                            <h3>基本信息</h3>
                         </div>
-                        <div class="info-compact-content">
-                            <h4>冯伟源</h4>
-                            <p>男 · 1988年05月 · 已婚</p>
+                        <div class="card-content">
+                            <div class="info-item">
+                                <span class="info-label">姓名</span>
+                                <span class="info-value">冯伟源</span>
+                            </div>
+                            <div class="info-item">
+                                <span class="info-label">性别</span>
+                                <span class="info-value">男</span>
+                            </div>
+                            <div class="info-item">
+                                <span class="info-label">出生年月</span>
+                                <span class="info-value">1988年05月</span>
+                            </div>
+                            <div class="info-item">
+                                <span class="info-label">婚姻状况</span>
+                                <span class="info-value">已婚</span>
+                            </div>
+                            <div class="info-item">
+                                <span class="info-label">国籍</span>
+                                <span class="info-value">中国</span>
+                            </div>
                         </div>
                     </div>
-                    <div class="info-compact-item">
-                        <div class="info-compact-icon">
-                            <i class="fas fa-map-marker-alt"></i>
+
+                    <!-- 联系方式卡片 -->
+                    <div class="info-card">
+                        <div class="card-header">
+                            <i class="fas fa-address-book"></i>
+                            <h3>联系方式</h3>
                         </div>
-                        <div class="info-compact-content">
-                            <h4>深圳 · 中国</h4>
-                            <p>华南农业大学-计算机系 · 本科</p>
+                        <div class="card-content">
+                            <div class="info-item">
+                                <span class="info-label">居住地</span>
+                                <span class="info-value">深圳</span>
+                            </div>
+                            <div class="info-item">
+                                <span class="info-label">联系电话</span>
+                                <span class="info-value">13763319074</span>
+                            </div>
+                            <div class="info-item">
+                                <span class="info-label">电子邮箱</span>
+                                <span class="info-value">107639177@qq.com</span>
+                            </div>
+                            <div class="info-item">
+                                <span class="info-label">微信</span>
+                                <span class="info-value">aaa777357</span>
+                            </div>
                         </div>
                     </div>
-                    <div class="info-compact-item">
-                        <div class="info-compact-icon">
-                            <i class="fas fa-phone"></i>
+
+                    <!-- 教育背景卡片 -->
+                    <div class="info-card">
+                        <div class="card-header">
+                            <i class="fas fa-graduation-cap"></i>
+                            <h3>教育背景</h3>
                         </div>
-                        <div class="info-compact-content">
-                            <h4>+86-13763319074</h4>
-                            <p>107639177@qq.com</p>
-                        </div>
-                    </div>
-                    <div class="info-compact-item">
-                        <div class="info-compact-icon">
-                            <i class="fab fa-weixin"></i>
-                        </div>
-                        <div class="info-compact-content">
-                            <h4>aaa777357</h4>
-                            <p>github.com/fengweiyuan</p>
+                        <div class="card-content">
+                            <div class="info-item full-width">
+                                <span class="info-label">毕业院校</span>
+                                <span class="info-value">华南农业大学-计算机系网络工程</span>
+                            </div>
+                            <div class="info-item">
+                                <span class="info-label">学历</span>
+                                <span class="info-value">本科</span>
+                            </div>
                         </div>
                     </div>
                 </div>
