--- a/index.html
+++ b/index.html
@@ -1789,7 +1789,7 @@
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2024 个人经历展示. 用心打造的专业简历.</p>
+                <p>用户为本，技术创新，尊重团队，生态共建，全球愿景</p>
             </div>
         </div>
     </footer>
