--- a/index.html
+++ b/index.html
@@ -1545,7 +1545,10 @@
                         <div class="highlight-badge">2020</div>
                         <div class="highlight-content">
                             <h4>社区技术分享</h4>
-                            <p>《如何运营亿级 QPS 的 Redis 系统》（知乎云+社区，2018.06）、《5 分钟学会这种更高效的 Redis 数据删除方式》（腾讯云+社区，2020.02）</p>
+                            <p>《5 分钟学会这种更高效的 Redis 数据删除方式》（腾讯云+社区，2020.02）、《如何运营亿级 QPS 的 Redis 系统》（知乎云+社区，2018.06）</p>
+                            <a href="https://zhuanlan.zhihu.com/p/37729093" target="_blank" class="highlight-link">
+                                <i class="fas fa-external-link-alt"></i> 查看详情
+                            </a>
                         </div>
                     </div>
 
