--- a/index.html
+++ b/index.html
@@ -334,6 +334,14 @@
                             <i class="fas fa-check-circle"></i>
                             <span>金融级数据库架构经验</span>
                         </div>
+                        <div class="highlight-item">
+                            <i class="fas fa-check-circle"></i>
+                            <span>海量数据库运维经验</span>
+                        </div>
+                        <div class="highlight-item">
+                            <i class="fas fa-check-circle"></i>
+                            <span>数据库平台建设专家</span>
+                        </div>
                     </div>
                 </div>
             </div>
